--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "escape-string-regexp": "^1.0.5",
+    "loaders.css": "^0.1.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-loaders": "^3.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "sort-by": "^1.2.0"
